Corrected description text.

--- a/NBA W-L%-Skeleton.html
+++ b/NBA W-L%-Skeleton.html
@@ -73,6 +73,9 @@
 	#header{
 		font: 5em sans-serif;
 	}
+	#header_desc{
+		font: 2em sans-serif;
+	}
 </style>
 </head>
 <body>
@@ -80,6 +83,11 @@
 <div class = "grid">
 	<div id = "header">
 		To Catch a Bull
+	</div>
+	<div id = "header_desc">
+		<p>
+			In the 1995-1996 season the Chicago Bulls under Michael Jordan went an unprecented 72-10.  Now 20 years later the Golden State Wariors under Stephen Curry hope to surpass them.
+		</p>
 	</div>
 	<div class = "col-1-4">
 		<input type = "button" class = "team" id = "team_CB" onclick = "DrawLine('95 Chicago Bulls')" value = "95 Chicago Bulls">
@@ -94,7 +102,7 @@
 	</div>
 	<div class = "col-1-4">
 		<div style = "margin: .5em;">
-			<p>In 1995-1996 season the Chicago Bulls under Michael Jordan went an unprecented 72-10.  Now 20 years later the Golden State Wariors under Stephen Curry hope to surpass them.  Click on the names above the graph to only show one team or both.  And hover over circles to see the final score.</p>
+			<p>Click on the names above the graph to only show one team or both.  And hover over circles to see the final score.</p>
 		</div>
 		<div id="score">
 			
