Typo in description.

--- a/NBA W-L%-Skeleton.html
+++ b/NBA W-L%-Skeleton.html
@@ -86,7 +86,7 @@
 	</div>
 	<div id = "header_desc">
 		<p>
-			In the 1995-1996 season the Chicago Bulls under Michael Jordan went an unprecented 72-10.  Now 20 years later the Golden State Wariors under Stephen Curry hope to surpass them.
+			In the 1995-1996 season the Chicago Bulls under Michael Jordan went an unprecedented 72-10.  Now 20 years later the Golden State Wariors under Stephen Curry hope to surpass them.
 		</p>
 	</div>
 	<div class = "col-1-4">
