--- a/NBA W-L%-Skeleton.html
+++ b/NBA W-L%-Skeleton.html
@@ -45,7 +45,6 @@
 	}
 	.team{
 		display: inline;
-		padding: .1em;
 		font: 10px sans-serif;
 		cursor: pointer;
 	}
@@ -89,19 +88,17 @@
 			In the 1995-1996 season the Chicago Bulls under Michael Jordan went an unprecedented 72-10.  Now 20 years later the Golden State Wariors under Stephen Curry hope to surpass them.
 		</p>
 	</div>
-	<div class = "col-1-4">
+	<div>
 		<input type = "button" class = "team" id = "team_CB" onclick = "DrawLine('95 Chicago Bulls')" value = "95 Chicago Bulls">
 		<input type = "button" class = "team" id = "team_GSW" onclick = "DrawLine('15 Golden State Warriors')" value = "15 Golden State Warriors">
 	</div>
-	<div class = "col-3-4"></div>
-	<br/>
 </div>
 <div class = "grid">
 	<div class = "col-3-4" id =	"svg_container">
 		<svg/>
 	</div>
 	<div class = "col-1-4">
-		<div style = "margin: .5em;">
+		<div>
 			<p>Click on the names above the graph to only show one team or both.  And hover over circles to see the final score.</p>
 		</div>
 		<div id="score">
@@ -276,9 +273,9 @@
 	var data = [{team:"95 Chicago Bulls",values:[]},
 		{team:"15 Golden State Warriors",values:[]}];
 	var margin = {top:20,bottom:20,left:35,right:30};
-	var cWidth = document.getElementById("svg_container").offsetWidth - margin.left - margin.right;
+	var cWidth = document.getElementById("svg_container").offsetWidth - margin.left - margin.right-1;
 	var cHeight = 400;
-	
+	console.log(document.getElementById("svg_container").offsetWidth);
 	var x = d3.scale.linear()
 		.domain([1,d3.max(recordData,function(d){ return d.length; })])
 		.rangeRound([5,cWidth]);
