--- a/NBA W-L%-Skeleton.html
+++ b/NBA W-L%-Skeleton.html
@@ -118,12 +118,26 @@
 </div>
 <script>
 	if (!Array.prototype.findIndex) {
-		Array.prototype.findIndex = function(obj, start) {
-			 for (var i = (start || 0), j = this.length; i < j; i++) {
-				 if (this[i] === obj) { return i; }
-			 }
-			 return -1;
+	  Array.prototype.findIndex = function(predicate) {
+		if (this === null) {
+		  throw new TypeError('Array.prototype.findIndex called on null or undefined');
 		}
+		if (typeof predicate !== 'function') {
+		  throw new TypeError('predicate must be a function');
+		}
+		var list = Object(this);
+		var length = list.length >>> 0;
+		var thisArg = arguments[1];
+		var value;
+
+		for (var i = 0; i < length; i++) {
+		  value = list[i];
+		  if (predicate.call(thisArg, value, i, list)) {
+			return i;
+		  }
+		}
+		return -1;
+	  };
 	}
 	var recordData = [[{o:"Charlotte Hornets",sym:"W", ptsT:105, ptsO: 91, rat:1},
 		{o:"Boston Celtics",sym:"W", ptsT:107, ptsO: 85, rat:1},
