--- a/groupeddrilldownbarchart.html
+++ b/groupeddrilldownbarchart.html
@@ -17,16 +17,42 @@
 </head>
 <body>
 <script src = "d3/d3.min.js" charset = "utf-8"></script>
+<span>Click on bars to drill down. Mouse over for values.</span>
+<br/>
 <svg/>
 <script>
+	if (!Array.prototype.findIndex) {
+	  Array.prototype.findIndex = function(predicate) {
+		if (this === null) {
+		  throw new TypeError('Array.prototype.findIndex called on null or undefined');
+		}
+		if (typeof predicate !== 'function') {
+		  throw new TypeError('predicate must be a function');
+		}
+		var list = Object(this);
+		var length = list.length >>> 0;
+		var thisArg = arguments[1];
+		var value;
+
+		for (var i = 0; i < length; i++) {
+		  value = list[i];
+		  if (predicate.call(thisArg, value, i, list)) {
+			return i;
+		  }
+		}
+		return -1;
+	  };
+	}
 	var data = [{group:"A",value:7, segments:{X:4,Y:2,Z:1}},
 		{group:"B",value:8, segments:{X:3,Y:3,Z:2}},
 		{group:"C",value:10, segments:{X:5,Y:2,Z:3}},
 		{group:"D",value:9, segments:{X:6,Y:3,Z:0}},
 		{group:"E",value:12, segments:{X:4,Y:4,Z:4}}];
-	var margin = {top: 10, bottom: 35, left: 35, right:10};
+	var margin = {top: 10, bottom: 35, left: 35, right:20};
 	var cWidth = 500;
-	var cHeight = 400;
+	var cHeight = 500;
+	var laHeight = 20;
+	var laWidth = 80;
 	
 	var x0 = d3.scale.ordinal()
 		.rangeRoundBands([0,cWidth],.1);
@@ -57,7 +83,7 @@
 	
 	x0.domain(data.map(function(d){ return d.group; }));
 	x1.domain(segmentKeys).rangeRoundBands([0,x0.rangeBand()]);
-	y.domain([0,d3.max(data,function(d){ return d.value; })]);
+	y.domain([0,d3.max(data,function(d){ return d.value; })*1.15]);
 	
 	var svg = d3.select("svg")
 		.attr("width",cWidth + margin.left + margin.right)
@@ -80,6 +106,21 @@
 		.attr("class","groups")
 		.attr("transform",function(d){ return "translate(" + x0(d.group) + ",0)"; });
 	
+	var left_arrow = svg.append("g")
+		.attr("transform","translate(0,0)");
+	
+	left_arrow.append("rect")
+		.attr("height",laHeight)
+		.attr("width", laWidth)
+		.attr("opacity",".70")
+		.attr("fill","transparent");
+	left_arrow.append("polygon")
+		.attr("points","30,20 40,30 50,20")
+		.attr("fill","transparent");
+	left_arrow.append("text")
+		.attr("transform","translate(10,15)")
+		.attr("fill","white")
+		.text("Value:");
 	data.forEach(function(d){
 		d.vals = [{group: d.group, val: d.value}];
 	});
@@ -93,6 +134,7 @@
 		
 		var exitTransition = d3.transition().duration(500).each(function(){ 
 			bars.exit()
+				.on("mouseover",null)
 			  .transition()
 				.attr("y",cHeight)
 				.attr("height",0)
@@ -116,7 +158,9 @@
 				.attr("y",cHeight)
 				.attr("height",0)
 				.attr("fill",function(d){ return color(d.group);})
-				.on("click",ChangeDepth);
+				.on("click",ChangeDepth)
+				.on("mouseover",null)
+				.on("mouseleave",HideDetails);
 		});
 		
 		var updateTransition = enterTransition.transition().duration(500).each(function(){
@@ -135,28 +179,49 @@
 				})
 				.attr("y",function(d){ return y(d.val);})
 				.attr("height",function(d){ return cHeight - y(d.val); })
-				.attr("fill",function(d){ return color(d.group); });
+				.attr("fill",function(d){ return color(d.group); })
+				.each("end",function(){ 
+					d3.select(this)
+						.on("mouseover",ShowDetails);});
 		});
 		
 	};
 	function ChangeDepth(d){
+		HideDetails();
 		var index = data.findIndex(function(key){ return key.group === d.group; });
 		if(index !== -1)
 			data[index].vals = segmentKeys.map(function(name){ return {group:name, val: +data[index].segments[name]}; });
 		else{
 			var g = (this).parentNode.__data__.group;
 			index = data.findIndex(function(key){ return key.group === g; });
+			console.log(index);
 			data[index].vals = [{group: data[index].group, val: data[index].value}];
 		}	
 		GenerateBars();
 	};
-	if (!Array.prototype.findIndex) {
-		Array.prototype.findIndex = function(obj, start) {
-			 for (var i = (start || 0), j = this.length; i < j; i++) {
-				 if (this[i] === obj) { return i; }
-			 }
-			 return -1;
-		}
+	function ShowDetails(d){
+		if(Number((this).attributes["height"].nodeValue) === 0)
+			return;
+		
+		var pData = (this).parentNode.__data__;
+		var pX = Math.round(x0(pData.group)+(Number((this).attributes["x"].nodeValue) + (Number((this).attributes["width"].nodeValue)/2)) - (laWidth/2));
+		var pY = Math.round(Number((this).attributes["y"].nodeValue) - laHeight-10);
+		
+		left_arrow.attr("transform","translate(" + pX + "," + pY + ")");
+		
+		left_arrow.select("rect")
+			.attr("fill","black");
+		left_arrow.select("polygon")
+			.attr("fill","red");
+		left_arrow.select("text")
+			.text("Value:"+d.val);
+	};
+	function HideDetails(){
+		left_arrow.attr("transform","translate(0,0)");
+		left_arrow.select("rect")
+			.attr("fill","transparent");
+		left_arrow.select("polygon")
+			.attr("fill","transparent");
 	};
 </script>
 </body>
